# lab4

./: .gitignore  Makefile  README.md  binary_image.py  golden_test.py  isa.py  lab4-task.md  machine.py  microcode.py  pyproject.toml  test_binary_image.py  test_execution_token.py  test_forth_tokenizer.py  test_isa_encoding.py  test_translator_control_flow.py  translator.py  translator_artifacts.py
.github/workflows/: ci.yml
core/: binary_image.py  forth_tokenizer.py  isa.py  machine.py  microcode.py  translator.py  translator_artifacts.py  translator_exceptions.py
examples/cache_test/: cache_test.bin.txt  cache_test.f
examples/cat/: cat.bin.txt  cat.f  cat_stdout.txt
examples/double_add/: double_add.bin.txt  double_add.f
examples/euler6/: euler6.bin.txt  euler6.f
examples/hello/: hello.bin.txt  hello.f
examples/hello_user_name/: hello_user_name.bin.txt  hello_user_name.f  hellous.bin.txt
examples/sort/: sort.bin.txt  sort.f
golden/: cache_test.yml  cat.yml  double_add.yml  euler6.yml  hello.yml  hello_user_name.yml  sort.yml
tests/: gen_golden.py  golden_test.py  test_binary_image.py  test_execution_token.py  test_forth_tokenizer.py  test_isa_encoding.py  test_translator_control_flow.py
